helm/simple-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: blockscout-manual
  namespace: eval-q-10
spec:
  containers:
  - name: ubuntu
    image: ubuntu:latest
    command: ["/bin/bash", "-c", "--"]
    args: ["while true; do sleep 30; done;"]
    resources:
      requests:
        memory: "2Gi"
        cpu: "1"
      limits:
        memory: "4Gi"
        cpu: "2"
  restartPolicy: Never
