helm/simple-total-psql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-postgresql
  namespace: eval-q-07
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-postgresql
  template:
    metadata:
      labels:
        app: my-postgresql
    spec:
      containers:
      - name: postgres
        image: postgres:latest
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data/pgdata
          subPath: pgdata
        resources:
          requests:
            memory: "2Gi"
            cpu: "1000m"
          limits:
            memory: "4Gi"
            cpu: "2000m"
      volumes:
      - name: postgres-storage
        persistentVolumeClaim:
          claimName: data-my-postgresql-new
---
apiVersion: v1
kind: Service
metadata:
  name: my-postgresql-service
  namespace: eval-q-07
spec:
  selector:
    app: my-postgresql
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
