helm/blockscout-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blockscout-ingress
  namespace: eval-b-01
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blockscout
                port:
                  number: 4000
