helm/goquorum-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: goquorum-ingress
  namespace: eval-q-04
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /validator-4
            pathType: Prefix
            backend:
              service:
                name: goquorum-node-validator-4
                port:
                  number: 8545
