helm/simple-bs-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blockscout-ingress
  namespace: eval-q-14
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blockscout-blockscout-stack-blockscout-svc
                port:
                  number: 4000
